--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,9 +7,9 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "vitest": "^0.34.6",
-    "@types/node": "^20.8.6",
-    "sst": "2.30.2"
+    "@types/node": "^20.8.7",
+    "sst": "2.30.2",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "zod": "^3.22.4"
