--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,9 +7,9 @@
     "typecheck": "tsc -noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.8.6",
     "@types/aws-lambda": "^8.10.125",
-    "vitest": "^0.34.6",
-    "sst": "2.30.2"
+    "@types/node": "^20.8.7",
+    "sst": "2.30.2",
+    "vitest": "^0.34.6"
   }
 }
